[gd_scene load_steps=3 format=3 uid="uid://2sjm4n5hkqqg"]

[ext_resource type="Script" path="res://PauseMenu.gd" id="1_74570"]
[ext_resource type="FontFile" uid="uid://cin3rhaldoear" path="res://Assets/PressStart2P-Regular.ttf" id="2_2ahsl"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_74570")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 488.0
offset_top = 232.0
offset_right = 603.0
offset_bottom = 333.0
scale = Vector2(1.51868, 1.49751)
mouse_filter = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to MM"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -379.0
offset_top = -307.0
offset_right = 770.0
offset_bottom = 338.0
scale = Vector2(1.80117, 2.04872)
mouse_filter = 2
color = Color(1, 1, 1, 0.2)

[node name="Label" type="Label" parent="."]
offset_left = 408.0
offset_top = 104.0
offset_right = 756.0
offset_bottom = 162.0
theme_override_fonts/font = ExtResource("2_2ahsl")
theme_override_font_sizes/font_size = 58
text = "PAUSED"
